fix: cli.sh restart error handling + disable OTel in jtapi-sidecar
cli.sh:
- Add restart_service() helper that checks systemctl exit code,
  logs diagnostics on failure, retries once with daemon-reload
- Replace all 8 bare systemctl restart calls with restart_service()
- Fix wait_for_services() to return non-zero on phase failures
  (was always returning 0, even when containers/db/health checks failed)
- Track phase_failures counter across all 4 startup phases

docker-compose:
- Add OTEL_ENABLED=false and MANAGEMENT_TRACING_ENABLED=false for
  jtapi-sidecar to prevent Spring Boot OtlpHttpSpanExporter from
  spamming UnknownHostException: otel-collector errors

--- a/docker-compose-jtapi.yml
+++ b/docker-compose-jtapi.yml
@@ -118,10 +118,12 @@ services:
       - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
       # JAR auto-restart when downloaded from NATS ObjectStore
       - WATCH_JARS=true
-      # Disable OpenTelemetry SDK by default (no collector in Docker Compose)
+      # Disable OpenTelemetry by default (no collector in Docker Compose)
+      - OTEL_ENABLED=false
       - OTEL_SDK_DISABLED=true
-      # OpenTelemetry (to enable: set OTEL_SDK_DISABLED=false and uncomment below)
-      # - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318/v1/traces
+      - MANAGEMENT_TRACING_ENABLED=false
+      # OpenTelemetry (to enable: set OTEL_ENABLED=true, OTEL_SDK_DISABLED=false, MANAGEMENT_TRACING_ENABLED=true)
+      # - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
       # - OTEL_TRACING_SAMPLING_PROBABILITY=1.0
     volumes:
       - jtapi-jars:/app/jars
