fix: MinIO healthcheck uses wget for alpine/minio compatibility
alpine/minio doesn't include curl — healthcheck was always failing,
causing jtapi-sidecar and ct-media to never start. Use wget instead.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -347,7 +347,7 @@ services:
     networks:
       - ct
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9000/minio/health/live || exit 1"]
+      test: ["CMD-SHELL", "wget -q --spider http://localhost:9000/minio/health/live || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
