--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -335,6 +335,7 @@ services:
     profiles: ["jtapi"]
     image: alpine/minio:RELEASE.2025-10-15T17-29-55Z
     command: server /data --console-address ":9001"
+    user: root
     restart: unless-stopped
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
