docs: update .env.example JTAPI endpoint comments for host networking

--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,8 @@ COMPOSE_PROFILES=
 # These are set automatically by `ct-cli jtapi enable` or `cli.sh jtapi enable`.
 # Only needed when COMPOSE_PROFILES includes "jtapi".
 # JTAPI_MODE=direct
-# JTAPI_SIDECAR_ENDPOINT=jtapi-sidecar:50051
-# JTAPI_SIDECAR_URL=http://jtapi-sidecar:8080
+# JTAPI_SIDECAR_ENDPOINT=<host-ip>:50051    # sidecar runs with network_mode:host
+# JTAPI_SIDECAR_URL=http://<host-ip>:8080   # use DEFAULT_IPV4 value
 # S3_ENABLED=true
 # S3_ENDPOINT=http://minio:9000
 # CT_MEDIA_ENDPOINT=ct-media:50053
