refactor: rename MINIO_* env vars to S3_* in deployment configs
- Update docker-compose.yml and docker-compose-jtapi.yml
- Update ova/cli.sh credential references
- Add seaweedfs-s3.json config
- Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ CT_MEDIA_VERSION=0.2.5
 # ─── Feature Profiles ───
 # Comma-separated list of Docker Compose profiles to activate.
 # Available profiles:
-#   jtapi  - Phone control stack (jtapi-sidecar, ct-media, minio)
+#   jtapi  - Phone control stack (jtapi-sidecar, ct-media, seaweedfs)
 #   otel   - OpenTelemetry collector (metrics export to Prometheus)
 #
 # Examples:
@@ -42,14 +42,15 @@ COMPOSE_PROFILES=
 # JTAPI_SIDECAR_ENDPOINT=jtapi-sidecar:50051
 # JTAPI_SIDECAR_URL=http://jtapi-sidecar:8080
 # S3_ENABLED=true
-# S3_ENDPOINT=http://minio:9000
+# S3_ENDPOINT=http://seaweedfs:8333
 # CT_MEDIA_ENDPOINT=ct-media:50053
 
-# ─── MinIO Credentials ───
-# Used by jtapi-sidecar, ct-media, and the web service for S3 audio storage.
-# Set BEFORE first start — changing after data exists requires MinIO reconfiguration.
-# MINIO_ROOT_USER=minioadmin
-# MINIO_ROOT_PASSWORD=minioadmin
+# ─── S3 / SeaweedFS Credentials ───
+# Used by jtapi-sidecar, ct-media, and the web service for object storage.
+# Default values suitable for development (SeaweedFS single-user mode).
+# Set BEFORE first start — changing after data exists requires reconfiguration.
+# S3_ACCESS_KEY_ID=minioadmin
+# S3_SECRET_ACCESS_KEY=minioadmin
 
 # ─── Observability ───
 # Grafana admin credentials (first-start only, ignored after initial provisioning)
