--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,9 +108,9 @@ services:
       - JTAPI_SIDECAR_ENDPOINT=${JTAPI_SIDECAR_ENDPOINT:-}
       - JTAPI_SIDECAR_URL=${JTAPI_SIDECAR_URL:-}
       - S3_ENABLED=${S3_ENABLED:-false}
-      - S3_ENDPOINT=${S3_ENDPOINT:-http://minio:9000}
-      - S3_ACCESS_KEY_ID=${MINIO_ROOT_USER:-minioadmin}
-      - S3_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+      - S3_ENDPOINT=${S3_ENDPOINT:-http://seaweedfs:8333}
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
       - S3_REGION=us-east-1
       - CT_MEDIA_ENDPOINT=${CT_MEDIA_ENDPOINT:-}
       - DOCKER_SOCKET=/var/run/docker.sock
@@ -273,11 +273,11 @@ services:
       - CTI_POOL_AUTO_CONFIGURE=true
       - CTI_POOL_SOURCE=nats
       - CTI_POOL_ENABLE_MEDIA=true
-      # MinIO for audio storage
-      - MINIO_ENABLED=true
-      - MINIO_ENDPOINT=http://minio:9000
-      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
-      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+      # S3 object storage for audio
+      - S3_ENABLED=true
+      - S3_ENDPOINT=http://seaweedfs:8333
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
       # JAR auto-restart when downloaded from NATS ObjectStore
       - WATCH_JARS=true
       # OpenTelemetry (enable via: ct otel enable)
@@ -312,9 +312,9 @@ services:
       - "50053"
     environment:
       - GRPC_PORT=50053
-      - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
-      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+      - S3_ENDPOINT=seaweedfs:8333
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
       # OpenTelemetry (enable via: ct otel enable)
       - OTEL_ENABLED=${OTEL_ENABLED:-false}
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT:-http://otel-collector:4317}
@@ -328,27 +328,25 @@ services:
       retries: 3
       start_period: 10s
     depends_on:
-      minio:
+      seaweedfs:
         condition: service_healthy
 
-  minio:
+  seaweedfs:
     profiles: ["jtapi"]
-    image: alpine/minio:RELEASE.2025-10-15T17-29-55Z
-    command: server /data --console-address ":9001"
-    user: root
+    image: chrislusf/seaweedfs:latest
+    command: "server -s3 -s3.port=8333 -s3.config=/etc/seaweedfs/s3.json -master.volumeSizeLimitMB=100"
     restart: unless-stopped
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
     expose:
-      - "9000"
-      - "9001"
+      - "8333"   # S3 API
+      - "8888"   # Filer
+      - "9333"   # Master
     volumes:
-      - minio-data:/data
+      - seaweedfs-data:/data
+      - ./seaweedfs-s3.json:/etc/seaweedfs/s3.json:ro
     networks:
       - ct
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://localhost:9000/minio/health/live || exit 1"]
+      test: ["CMD-SHELL", "wget -q --spider http://127.0.0.1:9333/cluster/healthz || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -373,5 +371,5 @@ volumes:
     driver: local
   jtapi-jars:
     driver: local
-  minio-data:
+  seaweedfs-data:
     driver: local
