fix: include seaweedfs-s3.json in OVA bundle
SeaweedFS crashes on appliances when the S3 config file is missing —
Docker creates a directory instead of a file for the bind mount. Add
the config to the bundle manifest, ship the file in ova/, extract it
during cli.sh update, and fix the OVA release title format.

--- a/.github/workflows/create-ova-release.yml
+++ b/.github/workflows/create-ova-release.yml
@@ -240,7 +240,7 @@ jobs:
           # Create GitHub release with both version files
           gh release create "$VERSION" \
             $PRERELEASE_FLAG \
-            --title "CallTelemetry OVA $VERSION" \
+            --title "$VERSION" \
             --notes "$(cat << NOTES_EOF
           ## CallTelemetry $VERSION
 
@@ -256,6 +256,10 @@ jobs:
           \`\`\`bash
           sudo ./cli.sh update $VERSION
           \`\`\`
+
+          ---
+
+          **Appliance Upgrade Instructions:** https://docs.calltelemetry.com/troubleshoot/upgrade
           NOTES_EOF
           )" \
             "ova/versions/${VERSION}.env" \
