fix: use explicit bind mount for seaweedfs-s3.json
Short-form bind mounts silently create a directory when the source
file is missing. The long-form type:bind syntax errors out instead,
giving a clear message rather than a corrupted mount.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -334,7 +334,9 @@ services:
   seaweedfs:
     profiles: ["jtapi"]
     image: chrislusf/seaweedfs:latest
-    command: "server -s3 -s3.port=8333 -s3.config=/etc/seaweedfs/s3.json -master.volumeSizeLimitMB=100"
+    command: >
+      server -s3 -s3.port=8333 -s3.config=/etc/seaweedfs/s3.json
+      -master.volumeSizeLimitMB=100
     restart: unless-stopped
     expose:
       - "8333"   # S3 API
@@ -342,7 +344,10 @@ services:
       - "9333"   # Master
     volumes:
       - seaweedfs-data:/data
-      - ./seaweedfs-s3.json:/etc/seaweedfs/s3.json:ro
+      - type: bind
+        source: ./seaweedfs-s3.json
+        target: /etc/seaweedfs/s3.json
+        read_only: true
     networks:
       - ct
     healthcheck:
